<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:src="@drawable/img_1" />

    <Button
        android:id="@+id/button"
        android:layout_width="58dp"
        android:layout_height="37dp"
        android:layout_gravity="right"
        android:text="@string/back"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="28sp" />
    <TextView
        android:id="@+id/text_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/author"
        android:textStyle="bold"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_content"
        android:layout_width="421dp"
        android:layout_height="277dp"
        android:text="@string/content"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="421dp"
        android:layout_height="225dp"
        android:layout_weight="8"
        android:text="@string/picture" />

</LinearLayout>